--- a/teste.css
+++ b/teste.css
@@ -3,6 +3,7 @@ img{
     width: 15%;
     margin-left: auto;
     margin-right: auto;
+    ;
 }
 
 body{
@@ -15,6 +16,7 @@ body{
 P{
     font-size: large;
     color: blueviolet;
+    position:center;
 }
 div {
     position:static;
